Fixed spacing issue with mars featured image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,11 +10,6 @@ body {
     text-align: center;
 }
 
-.mars-featured-image-container {
-    height: 100%;
-    width: 100%;
-}
-
 .mars-update-button {
     margin-left: 25px;
 }
